// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatronCurrentLoans tests should load the details component 1`] = `
<Overridable(Loader)
  isLoading={false}
>
  <Error
    FallbackComponent={[Function]}
    boundary={false}
    error={null}
    onUIError={null}
  >
    <ResultsTable
      columns={
        Array [
          Object {
            "formatter": [Function],
            "title": "Loan",
          },
          Object {
            "formatter": [Function],
            "title": "Document",
          },
          Object {
            "formatter": [Function],
            "title": "Item barcode",
          },
          Object {
            "field": "metadata.start_date",
            "formatter": [Function],
            "title": "Start date",
          },
          Object {
            "field": "metadata.end_date",
            "formatter": [Function],
            "title": "End date",
          },
          Object {
            "field": "metadata.extension_count",
            "title": "Renewals",
          },
        ]
      }
      currentPage={1}
      data={Array []}
      fixed={false}
      headerActionComponent={null}
      name="current loans"
      paginationComponent={null}
      renderEmptyResultsElement={null}
      seeAllComponent={
        <SeeAllButton
          disabled={false}
          fluid={false}
          to="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
        />
      }
      showAllResults={false}
      showMaxRows={5}
      singleLine={true}
      subtitle=""
      title=""
      totalHitsCount={0}
    />
  </Error>
</Overridable(Loader)>
`;

exports[`PatronCurrentLoans tests should render patron loans 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronCurrentLoans
      data={
        Object {
          "hits": Array [
            Object {
              "id": 1,
              "metadata": Object {
                "document": Object {
                  "publication_year": "1950",
                  "title": "Less: A Novel",
                },
                "document_pid": "docid-7",
                "end_date": "2018-07-28",
                "item": Object {
                  "barcode": "123456789-54",
                },
                "item_pid": Object {
                  "type": "pitmid",
                  "value": "itemid-56",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-5",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "ITEM_ON_LOAN",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan1",
            },
            Object {
              "id": 2,
              "metadata": Object {
                "document": Object {
                  "publication_year": "1950",
                  "title": "Less: A Novel",
                },
                "document_pid": "docid-8",
                "end_date": "2018-07-28",
                "item": Object {
                  "barcode": "123456789-54",
                },
                "item_pid": Object {
                  "type": "pitmid",
                  "value": "itemid-57",
                },
                "patron_pid": "2",
                "pickup_location_pid": "1",
                "pid": "loanid-6",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "ITEM_ON_LOAN",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan2",
            },
          ],
          "total": 2,
        }
      }
      error={null}
      fetchPatronCurrentLoans={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      isLoading={false}
      loanState=""
      patronDetails={
        Object {
          "user_pid": "2",
        }
      }
      showMaxLoans={5}
    >
      <Overridable(Loader)
        isLoading={false}
      >
        <Loader
          isLoading={false}
        >
          <Overridable
            id="Loader.layout"
            isLoading={false}
          >
            <Error
              FallbackComponent={[Function]}
              boundary={false}
              error={null}
              onUIError={null}
            >
              <ResultsTable
                columns={
                  Array [
                    Object {
                      "formatter": [Function],
                      "title": "Loan",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Document",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Item barcode",
                    },
                    Object {
                      "field": "metadata.start_date",
                      "formatter": [Function],
                      "title": "Start date",
                    },
                    Object {
                      "field": "metadata.end_date",
                      "formatter": [Function],
                      "title": "End date",
                    },
                    Object {
                      "field": "metadata.extension_count",
                      "title": "Renewals",
                    },
                  ]
                }
                currentPage={1}
                data={
                  Array [
                    Object {
                      "id": 1,
                      "metadata": Object {
                        "document": Object {
                          "publication_year": "1950",
                          "title": "Less: A Novel",
                        },
                        "document_pid": "docid-7",
                        "end_date": "2018-07-28",
                        "item": Object {
                          "barcode": "123456789-54",
                        },
                        "item_pid": Object {
                          "type": "pitmid",
                          "value": "itemid-56",
                        },
                        "patron_pid": "1",
                        "pickup_location_pid": "1",
                        "pid": "loanid-5",
                        "request_expire_date": "2019-06-28",
                        "request_start_date": "2018-06-28",
                        "start_date": "2018-06-28",
                        "state": "ITEM_ON_LOAN",
                        "transaction_date": "2018-06-29",
                        "transaction_location_pid": "1",
                      },
                      "pid": "loan1",
                    },
                    Object {
                      "id": 2,
                      "metadata": Object {
                        "document": Object {
                          "publication_year": "1950",
                          "title": "Less: A Novel",
                        },
                        "document_pid": "docid-8",
                        "end_date": "2018-07-28",
                        "item": Object {
                          "barcode": "123456789-54",
                        },
                        "item_pid": Object {
                          "type": "pitmid",
                          "value": "itemid-57",
                        },
                        "patron_pid": "2",
                        "pickup_location_pid": "1",
                        "pid": "loanid-6",
                        "request_expire_date": "2019-06-28",
                        "request_start_date": "2018-06-28",
                        "start_date": "2018-06-28",
                        "state": "ITEM_ON_LOAN",
                        "transaction_date": "2018-06-29",
                        "transaction_location_pid": "1",
                      },
                      "pid": "loan2",
                    },
                  ]
                }
                fixed={false}
                headerActionComponent={null}
                name="current loans"
                paginationComponent={null}
                renderEmptyResultsElement={null}
                seeAllComponent={
                  <SeeAllButton
                    disabled={false}
                    fluid={false}
                    to="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
                  />
                }
                showAllResults={false}
                showMaxRows={5}
                singleLine={true}
                subtitle=""
                title=""
                totalHitsCount={2}
              >
                <Table
                  as="table"
                  compact={true}
                  fixed={false}
                  name="current loans"
                  selectable={true}
                  singleLine={true}
                  striped={true}
                  subtitle=""
                  title=""
                  unstackable={true}
                >
                  <table
                    className="ui selectable single line striped unstackable compact table"
                    name="current loans"
                    subtitle=""
                    title=""
                  >
                    <ResultsTableHeader
                      columns={
                        Array [
                          Object {
                            "formatter": [Function],
                            "title": "Loan",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Document",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Item barcode",
                          },
                          Object {
                            "field": "metadata.start_date",
                            "formatter": [Function],
                            "title": "Start date",
                          },
                          Object {
                            "field": "metadata.end_date",
                            "formatter": [Function],
                            "title": "End date",
                          },
                          Object {
                            "field": "metadata.extension_count",
                            "title": "Renewals",
                          },
                        ]
                      }
                    >
                      <TableHeader
                        as="thead"
                      >
                        <thead
                          className=""
                        >
                          <TableRow
                            as="tr"
                            cellAs="td"
                            data-test="header"
                          >
                            <tr
                              className=""
                              data-test="header"
                            >
                              <TableHeaderCell
                                as="th"
                                key="Loan"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Loan
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Document"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Document
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Item barcode"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Item barcode
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Start date"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Start date
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="End date"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    End date
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Renewals"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Renewals
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                            </tr>
                          </TableRow>
                        </thead>
                      </TableHeader>
                    </ResultsTableHeader>
                    <ResultsTableBody
                      columns={
                        Array [
                          Object {
                            "formatter": [Function],
                            "title": "Loan",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Document",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Item barcode",
                          },
                          Object {
                            "field": "metadata.start_date",
                            "formatter": [Function],
                            "title": "Start date",
                          },
                          Object {
                            "field": "metadata.end_date",
                            "formatter": [Function],
                            "title": "End date",
                          },
                          Object {
                            "field": "metadata.extension_count",
                            "title": "Renewals",
                          },
                        ]
                      }
                      rows={
                        Array [
                          Object {
                            "id": 1,
                            "metadata": Object {
                              "document": Object {
                                "publication_year": "1950",
                                "title": "Less: A Novel",
                              },
                              "document_pid": "docid-7",
                              "end_date": "2018-07-28",
                              "item": Object {
                                "barcode": "123456789-54",
                              },
                              "item_pid": Object {
                                "type": "pitmid",
                                "value": "itemid-56",
                              },
                              "patron_pid": "1",
                              "pickup_location_pid": "1",
                              "pid": "loanid-5",
                              "request_expire_date": "2019-06-28",
                              "request_start_date": "2018-06-28",
                              "start_date": "2018-06-28",
                              "state": "ITEM_ON_LOAN",
                              "transaction_date": "2018-06-29",
                              "transaction_location_pid": "1",
                            },
                            "pid": "loan1",
                          },
                          Object {
                            "id": 2,
                            "metadata": Object {
                              "document": Object {
                                "publication_year": "1950",
                                "title": "Less: A Novel",
                              },
                              "document_pid": "docid-8",
                              "end_date": "2018-07-28",
                              "item": Object {
                                "barcode": "123456789-54",
                              },
                              "item_pid": Object {
                                "type": "pitmid",
                                "value": "itemid-57",
                              },
                              "patron_pid": "2",
                              "pickup_location_pid": "1",
                              "pid": "loanid-6",
                              "request_expire_date": "2019-06-28",
                              "request_start_date": "2018-06-28",
                              "start_date": "2018-06-28",
                              "state": "ITEM_ON_LOAN",
                              "transaction_date": "2018-06-29",
                              "transaction_location_pid": "1",
                            },
                            "pid": "loan2",
                          },
                        ]
                      }
                    >
                      <TableBody
                        as="tbody"
                      >
                        <tbody
                          className=""
                        >
                          <TableRow
                            as="tr"
                            cellAs="td"
                            data-test="loan1"
                            key="loan1"
                          >
                            <tr
                              className=""
                              data-test="loan1"
                            >
                              <TableCell
                                as="td"
                                data-label="Loan"
                                data-test="0-loan1"
                                key="0-loan1"
                              >
                                <td
                                  className=""
                                  data-label="Loan"
                                  data-test="0-loan1"
                                >
                                  <Link
                                    data-test="loanid-5"
                                    to="url/loanid-5"
                                  >
                                    <LinkAnchor
                                      data-test="loanid-5"
                                      href="/url/loanid-5"
                                      navigate={[Function]}
                                    >
                                      <a
                                        data-test="loanid-5"
                                        href="/url/loanid-5"
                                        onClick={[Function]}
                                      >
                                        loanid-5
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Document"
                                data-test="1-loan1"
                                key="1-loan1"
                              >
                                <td
                                  className=""
                                  data-label="Document"
                                  data-test="1-loan1"
                                >
                                  <Link
                                    data-test="loanid-5"
                                    to="/backoffice/documents/docid-7"
                                  >
                                    <LinkAnchor
                                      data-test="loanid-5"
                                      href="/backoffice/documents/docid-7"
                                      navigate={[Function]}
                                    >
                                      <a
                                        data-test="loanid-5"
                                        href="/backoffice/documents/docid-7"
                                        onClick={[Function]}
                                      >
                                        <Overridable(LiteratureTitle)
                                          publicationYear="1950"
                                          title="Less: A Novel"
                                        >
                                          <LiteratureTitle
                                            edition={null}
                                            publicationYear="1950"
                                            title="Less: A Novel"
                                            truncate={true}
                                            truncateLines={2}
                                            truncateWidth={null}
                                          >
                                            <Truncate
                                              lines={2}
                                              width={null}
                                            >
                                              <span
                                                style={
                                                  Object {
                                                    "WebkitBoxOrient": "vertical",
                                                    "WebkitLineClamp": 2,
                                                    "display": "-webkit-box",
                                                    "overflow": "hidden",
                                                    "textOverflow": "ellipsis",
                                                    "whiteSpace": "normal",
                                                  }
                                                }
                                              >
                                                Less: A Novel
                                                 
                                                <EditionYear
                                                  edition={null}
                                                  publicationYear="1950"
                                                >
                                                  (1950)
                                                </EditionYear>
                                              </span>
                                            </Truncate>
                                          </LiteratureTitle>
                                        </Overridable(LiteratureTitle)>
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Item barcode"
                                data-test="2-loan1"
                                key="2-loan1"
                              >
                                <td
                                  className=""
                                  data-label="Item barcode"
                                  data-test="2-loan1"
                                >
                                  <Link
                                    to="/backoffice/items/123456789-54"
                                  >
                                    <LinkAnchor
                                      href="/backoffice/items/123456789-54"
                                      navigate={[Function]}
                                    >
                                      <a
                                        href="/backoffice/items/123456789-54"
                                        onClick={[Function]}
                                      >
                                        123456789-54
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Start date"
                                data-test="3-loan1"
                                key="3-loan1"
                              >
                                <td
                                  className=""
                                  data-label="Start date"
                                  data-test="3-loan1"
                                >
                                  6/28/2018
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="End date"
                                data-test="4-loan1"
                                key="4-loan1"
                              >
                                <td
                                  className=""
                                  data-label="End date"
                                  data-test="4-loan1"
                                >
                                  7/28/2018
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Renewals"
                                data-test="5-loan1"
                                key="5-loan1"
                              >
                                <td
                                  className=""
                                  data-label="Renewals"
                                  data-test="5-loan1"
                                >
                                  -
                                </td>
                              </TableCell>
                            </tr>
                          </TableRow>
                          <TableRow
                            as="tr"
                            cellAs="td"
                            data-test="loan2"
                            key="loan2"
                          >
                            <tr
                              className=""
                              data-test="loan2"
                            >
                              <TableCell
                                as="td"
                                data-label="Loan"
                                data-test="0-loan2"
                                key="0-loan2"
                              >
                                <td
                                  className=""
                                  data-label="Loan"
                                  data-test="0-loan2"
                                >
                                  <Link
                                    data-test="loanid-6"
                                    to="url/loanid-6"
                                  >
                                    <LinkAnchor
                                      data-test="loanid-6"
                                      href="/url/loanid-6"
                                      navigate={[Function]}
                                    >
                                      <a
                                        data-test="loanid-6"
                                        href="/url/loanid-6"
                                        onClick={[Function]}
                                      >
                                        loanid-6
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Document"
                                data-test="1-loan2"
                                key="1-loan2"
                              >
                                <td
                                  className=""
                                  data-label="Document"
                                  data-test="1-loan2"
                                >
                                  <Link
                                    data-test="loanid-6"
                                    to="/backoffice/documents/docid-8"
                                  >
                                    <LinkAnchor
                                      data-test="loanid-6"
                                      href="/backoffice/documents/docid-8"
                                      navigate={[Function]}
                                    >
                                      <a
                                        data-test="loanid-6"
                                        href="/backoffice/documents/docid-8"
                                        onClick={[Function]}
                                      >
                                        <Overridable(LiteratureTitle)
                                          publicationYear="1950"
                                          title="Less: A Novel"
                                        >
                                          <LiteratureTitle
                                            edition={null}
                                            publicationYear="1950"
                                            title="Less: A Novel"
                                            truncate={true}
                                            truncateLines={2}
                                            truncateWidth={null}
                                          >
                                            <Truncate
                                              lines={2}
                                              width={null}
                                            >
                                              <span
                                                style={
                                                  Object {
                                                    "WebkitBoxOrient": "vertical",
                                                    "WebkitLineClamp": 2,
                                                    "display": "-webkit-box",
                                                    "overflow": "hidden",
                                                    "textOverflow": "ellipsis",
                                                    "whiteSpace": "normal",
                                                  }
                                                }
                                              >
                                                Less: A Novel
                                                 
                                                <EditionYear
                                                  edition={null}
                                                  publicationYear="1950"
                                                >
                                                  (1950)
                                                </EditionYear>
                                              </span>
                                            </Truncate>
                                          </LiteratureTitle>
                                        </Overridable(LiteratureTitle)>
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Item barcode"
                                data-test="2-loan2"
                                key="2-loan2"
                              >
                                <td
                                  className=""
                                  data-label="Item barcode"
                                  data-test="2-loan2"
                                >
                                  <Link
                                    to="/backoffice/items/123456789-54"
                                  >
                                    <LinkAnchor
                                      href="/backoffice/items/123456789-54"
                                      navigate={[Function]}
                                    >
                                      <a
                                        href="/backoffice/items/123456789-54"
                                        onClick={[Function]}
                                      >
                                        123456789-54
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Start date"
                                data-test="3-loan2"
                                key="3-loan2"
                              >
                                <td
                                  className=""
                                  data-label="Start date"
                                  data-test="3-loan2"
                                >
                                  6/28/2018
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="End date"
                                data-test="4-loan2"
                                key="4-loan2"
                              >
                                <td
                                  className=""
                                  data-label="End date"
                                  data-test="4-loan2"
                                >
                                  7/28/2018
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Renewals"
                                data-test="5-loan2"
                                key="5-loan2"
                              >
                                <td
                                  className=""
                                  data-label="Renewals"
                                  data-test="5-loan2"
                                >
                                  -
                                </td>
                              </TableCell>
                            </tr>
                          </TableRow>
                        </tbody>
                      </TableBody>
                    </ResultsTableBody>
                    <ResultsTableFooter
                      allRowsNumber={2}
                      columnsNumber={6}
                      currentPage={1}
                      paginationComponent={null}
                      seeAllComponent={
                        <SeeAllButton
                          disabled={false}
                          fluid={false}
                          to="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
                        />
                      }
                      showAllResults={false}
                      showMaxRows={5}
                    />
                  </table>
                </Table>
              </ResultsTable>
            </Error>
          </Overridable>
        </Loader>
      </Overridable(Loader)>
    </PatronCurrentLoans>
  </Router>
</BrowserRouter>
`;

exports[`PatronCurrentLoans tests should render show a message with no user loans 1`] = `
<PatronCurrentLoans
  data={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  error={null}
  fetchPatronCurrentLoans={
    [MockFunction] {
      "calls": Array [
        Array [
          "2",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  isLoading={false}
  loanState=""
  patronDetails={
    Object {
      "user_pid": "2",
    }
  }
  showMaxLoans={5}
>
  <Overridable(Loader)
    isLoading={false}
  >
    <Loader
      isLoading={false}
    >
      <Overridable
        id="Loader.layout"
        isLoading={false}
      >
        <Error
          FallbackComponent={[Function]}
          boundary={false}
          error={null}
          onUIError={null}
        >
          <ResultsTable
            columns={
              Array [
                Object {
                  "formatter": [Function],
                  "title": "Loan",
                },
                Object {
                  "formatter": [Function],
                  "title": "Document",
                },
                Object {
                  "formatter": [Function],
                  "title": "Item barcode",
                },
                Object {
                  "field": "metadata.start_date",
                  "formatter": [Function],
                  "title": "Start date",
                },
                Object {
                  "field": "metadata.end_date",
                  "formatter": [Function],
                  "title": "End date",
                },
                Object {
                  "field": "metadata.extension_count",
                  "title": "Renewals",
                },
              ]
            }
            currentPage={1}
            data={Array []}
            fixed={false}
            headerActionComponent={null}
            name="current loans"
            paginationComponent={null}
            renderEmptyResultsElement={null}
            seeAllComponent={
              <SeeAllButton
                disabled={false}
                fluid={false}
                to="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
              />
            }
            showAllResults={false}
            showMaxRows={5}
            singleLine={true}
            subtitle=""
            title=""
            totalHitsCount={0}
          >
            <Message
              data-test="no-results"
              icon={true}
              info={true}
            >
              <div
                className="ui icon info message"
                data-test="no-results"
              >
                <MessageContent>
                  <div
                    className="content"
                  >
                    <MessageHeader>
                      <div
                        className="header"
                      >
                        No results found
                      </div>
                    </MessageHeader>
                    There are no 
                    current loans
                    .
                  </div>
                </MessageContent>
              </div>
            </Message>
          </ResultsTable>
        </Error>
      </Overridable>
    </Loader>
  </Overridable(Loader)>
</PatronCurrentLoans>
`;

exports[`PatronCurrentLoans tests should render the see all button when showing only a few patron loans 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronCurrentLoans
      data={
        Object {
          "hits": Array [
            Object {
              "id": 1,
              "metadata": Object {
                "document": Object {
                  "publication_year": "1950",
                  "title": "Less: A Novel",
                },
                "document_pid": "docid-7",
                "end_date": "2018-07-28",
                "item": Object {
                  "barcode": "123456789-54",
                },
                "item_pid": Object {
                  "type": "pitmid",
                  "value": "itemid-56",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-5",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "ITEM_ON_LOAN",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan1",
            },
            Object {
              "id": 2,
              "metadata": Object {
                "document": Object {
                  "publication_year": "1950",
                  "title": "Less: A Novel",
                },
                "document_pid": "docid-8",
                "end_date": "2018-07-28",
                "item": Object {
                  "barcode": "123456789-54",
                },
                "item_pid": Object {
                  "type": "pitmid",
                  "value": "itemid-57",
                },
                "patron_pid": "2",
                "pickup_location_pid": "1",
                "pid": "loanid-6",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "ITEM_ON_LOAN",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan2",
            },
          ],
          "total": 2,
        }
      }
      error={null}
      fetchPatronCurrentLoans={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      isLoading={false}
      patronDetails={
        Object {
          "user_pid": "2",
        }
      }
      showMaxLoans={1}
    >
      <Overridable(Loader)
        isLoading={false}
      >
        <Loader
          isLoading={false}
        >
          <Overridable
            id="Loader.layout"
            isLoading={false}
          >
            <Error
              FallbackComponent={[Function]}
              boundary={false}
              error={null}
              onUIError={null}
            >
              <ResultsTable
                columns={
                  Array [
                    Object {
                      "formatter": [Function],
                      "title": "Loan",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Document",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Item barcode",
                    },
                    Object {
                      "field": "metadata.start_date",
                      "formatter": [Function],
                      "title": "Start date",
                    },
                    Object {
                      "field": "metadata.end_date",
                      "formatter": [Function],
                      "title": "End date",
                    },
                    Object {
                      "field": "metadata.extension_count",
                      "title": "Renewals",
                    },
                  ]
                }
                currentPage={1}
                data={
                  Array [
                    Object {
                      "id": 1,
                      "metadata": Object {
                        "document": Object {
                          "publication_year": "1950",
                          "title": "Less: A Novel",
                        },
                        "document_pid": "docid-7",
                        "end_date": "2018-07-28",
                        "item": Object {
                          "barcode": "123456789-54",
                        },
                        "item_pid": Object {
                          "type": "pitmid",
                          "value": "itemid-56",
                        },
                        "patron_pid": "1",
                        "pickup_location_pid": "1",
                        "pid": "loanid-5",
                        "request_expire_date": "2019-06-28",
                        "request_start_date": "2018-06-28",
                        "start_date": "2018-06-28",
                        "state": "ITEM_ON_LOAN",
                        "transaction_date": "2018-06-29",
                        "transaction_location_pid": "1",
                      },
                      "pid": "loan1",
                    },
                    Object {
                      "id": 2,
                      "metadata": Object {
                        "document": Object {
                          "publication_year": "1950",
                          "title": "Less: A Novel",
                        },
                        "document_pid": "docid-8",
                        "end_date": "2018-07-28",
                        "item": Object {
                          "barcode": "123456789-54",
                        },
                        "item_pid": Object {
                          "type": "pitmid",
                          "value": "itemid-57",
                        },
                        "patron_pid": "2",
                        "pickup_location_pid": "1",
                        "pid": "loanid-6",
                        "request_expire_date": "2019-06-28",
                        "request_start_date": "2018-06-28",
                        "start_date": "2018-06-28",
                        "state": "ITEM_ON_LOAN",
                        "transaction_date": "2018-06-29",
                        "transaction_location_pid": "1",
                      },
                      "pid": "loan2",
                    },
                  ]
                }
                fixed={false}
                headerActionComponent={null}
                name="current loans"
                paginationComponent={null}
                renderEmptyResultsElement={null}
                seeAllComponent={
                  <SeeAllButton
                    disabled={false}
                    fluid={false}
                    to="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
                  />
                }
                showAllResults={false}
                showMaxRows={1}
                singleLine={true}
                subtitle=""
                title=""
                totalHitsCount={2}
              >
                <Table
                  as="table"
                  compact={true}
                  fixed={false}
                  name="current loans"
                  selectable={true}
                  singleLine={true}
                  striped={true}
                  subtitle=""
                  title=""
                  unstackable={true}
                >
                  <table
                    className="ui selectable single line striped unstackable compact table"
                    name="current loans"
                    subtitle=""
                    title=""
                  >
                    <ResultsTableHeader
                      columns={
                        Array [
                          Object {
                            "formatter": [Function],
                            "title": "Loan",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Document",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Item barcode",
                          },
                          Object {
                            "field": "metadata.start_date",
                            "formatter": [Function],
                            "title": "Start date",
                          },
                          Object {
                            "field": "metadata.end_date",
                            "formatter": [Function],
                            "title": "End date",
                          },
                          Object {
                            "field": "metadata.extension_count",
                            "title": "Renewals",
                          },
                        ]
                      }
                    >
                      <TableHeader
                        as="thead"
                      >
                        <thead
                          className=""
                        >
                          <TableRow
                            as="tr"
                            cellAs="td"
                            data-test="header"
                          >
                            <tr
                              className=""
                              data-test="header"
                            >
                              <TableHeaderCell
                                as="th"
                                key="Loan"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Loan
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Document"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Document
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Item barcode"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Item barcode
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Start date"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Start date
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="End date"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    End date
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Renewals"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Renewals
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                            </tr>
                          </TableRow>
                        </thead>
                      </TableHeader>
                    </ResultsTableHeader>
                    <ResultsTableBody
                      columns={
                        Array [
                          Object {
                            "formatter": [Function],
                            "title": "Loan",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Document",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Item barcode",
                          },
                          Object {
                            "field": "metadata.start_date",
                            "formatter": [Function],
                            "title": "Start date",
                          },
                          Object {
                            "field": "metadata.end_date",
                            "formatter": [Function],
                            "title": "End date",
                          },
                          Object {
                            "field": "metadata.extension_count",
                            "title": "Renewals",
                          },
                        ]
                      }
                      rows={
                        Array [
                          Object {
                            "id": 1,
                            "metadata": Object {
                              "document": Object {
                                "publication_year": "1950",
                                "title": "Less: A Novel",
                              },
                              "document_pid": "docid-7",
                              "end_date": "2018-07-28",
                              "item": Object {
                                "barcode": "123456789-54",
                              },
                              "item_pid": Object {
                                "type": "pitmid",
                                "value": "itemid-56",
                              },
                              "patron_pid": "1",
                              "pickup_location_pid": "1",
                              "pid": "loanid-5",
                              "request_expire_date": "2019-06-28",
                              "request_start_date": "2018-06-28",
                              "start_date": "2018-06-28",
                              "state": "ITEM_ON_LOAN",
                              "transaction_date": "2018-06-29",
                              "transaction_location_pid": "1",
                            },
                            "pid": "loan1",
                          },
                        ]
                      }
                    >
                      <TableBody
                        as="tbody"
                      >
                        <tbody
                          className=""
                        >
                          <TableRow
                            as="tr"
                            cellAs="td"
                            data-test="loan1"
                            key="loan1"
                          >
                            <tr
                              className=""
                              data-test="loan1"
                            >
                              <TableCell
                                as="td"
                                data-label="Loan"
                                data-test="0-loan1"
                                key="0-loan1"
                              >
                                <td
                                  className=""
                                  data-label="Loan"
                                  data-test="0-loan1"
                                >
                                  <Link
                                    data-test="loanid-5"
                                    to="url/loanid-5"
                                  >
                                    <LinkAnchor
                                      data-test="loanid-5"
                                      href="/url/loanid-5"
                                      navigate={[Function]}
                                    >
                                      <a
                                        data-test="loanid-5"
                                        href="/url/loanid-5"
                                        onClick={[Function]}
                                      >
                                        loanid-5
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Document"
                                data-test="1-loan1"
                                key="1-loan1"
                              >
                                <td
                                  className=""
                                  data-label="Document"
                                  data-test="1-loan1"
                                >
                                  <Link
                                    data-test="loanid-5"
                                    to="/backoffice/documents/docid-7"
                                  >
                                    <LinkAnchor
                                      data-test="loanid-5"
                                      href="/backoffice/documents/docid-7"
                                      navigate={[Function]}
                                    >
                                      <a
                                        data-test="loanid-5"
                                        href="/backoffice/documents/docid-7"
                                        onClick={[Function]}
                                      >
                                        <Overridable(LiteratureTitle)
                                          publicationYear="1950"
                                          title="Less: A Novel"
                                        >
                                          <LiteratureTitle
                                            edition={null}
                                            publicationYear="1950"
                                            title="Less: A Novel"
                                            truncate={true}
                                            truncateLines={2}
                                            truncateWidth={null}
                                          >
                                            <Truncate
                                              lines={2}
                                              width={null}
                                            >
                                              <span
                                                style={
                                                  Object {
                                                    "WebkitBoxOrient": "vertical",
                                                    "WebkitLineClamp": 2,
                                                    "display": "-webkit-box",
                                                    "overflow": "hidden",
                                                    "textOverflow": "ellipsis",
                                                    "whiteSpace": "normal",
                                                  }
                                                }
                                              >
                                                Less: A Novel
                                                 
                                                <EditionYear
                                                  edition={null}
                                                  publicationYear="1950"
                                                >
                                                  (1950)
                                                </EditionYear>
                                              </span>
                                            </Truncate>
                                          </LiteratureTitle>
                                        </Overridable(LiteratureTitle)>
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Item barcode"
                                data-test="2-loan1"
                                key="2-loan1"
                              >
                                <td
                                  className=""
                                  data-label="Item barcode"
                                  data-test="2-loan1"
                                >
                                  <Link
                                    to="/backoffice/items/123456789-54"
                                  >
                                    <LinkAnchor
                                      href="/backoffice/items/123456789-54"
                                      navigate={[Function]}
                                    >
                                      <a
                                        href="/backoffice/items/123456789-54"
                                        onClick={[Function]}
                                      >
                                        123456789-54
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Start date"
                                data-test="3-loan1"
                                key="3-loan1"
                              >
                                <td
                                  className=""
                                  data-label="Start date"
                                  data-test="3-loan1"
                                >
                                  6/28/2018
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="End date"
                                data-test="4-loan1"
                                key="4-loan1"
                              >
                                <td
                                  className=""
                                  data-label="End date"
                                  data-test="4-loan1"
                                >
                                  7/28/2018
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Renewals"
                                data-test="5-loan1"
                                key="5-loan1"
                              >
                                <td
                                  className=""
                                  data-label="Renewals"
                                  data-test="5-loan1"
                                >
                                  -
                                </td>
                              </TableCell>
                            </tr>
                          </TableRow>
                        </tbody>
                      </TableBody>
                    </ResultsTableBody>
                    <ResultsTableFooter
                      allRowsNumber={2}
                      columnsNumber={6}
                      currentPage={1}
                      paginationComponent={null}
                      seeAllComponent={
                        <SeeAllButton
                          disabled={false}
                          fluid={false}
                          to="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
                        />
                      }
                      showAllResults={false}
                      showMaxRows={1}
                    >
                      <TableFooter
                        as="tfoot"
                        data-test="footer"
                        fullWidth={true}
                      >
                        <TableHeader
                          as="tfoot"
                          data-test="footer"
                          fullWidth={true}
                        >
                          <tfoot
                            className="full-width"
                            data-test="footer"
                          >
                            <TableRow
                              as="tr"
                              cellAs="td"
                            >
                              <tr
                                className=""
                              >
                                <TableHeaderCell
                                  as="th"
                                  colSpan={7}
                                  textAlign="right"
                                >
                                  <TableCell
                                    as="th"
                                    className=""
                                    colSpan={7}
                                    textAlign="right"
                                  >
                                    <th
                                      className="right aligned"
                                      colSpan={7}
                                    >
                                      <span
                                        className="results-table-compact-summary"
                                      >
                                        Showing entries 
                                        1
                                        -
                                        1
                                         of 
                                        2
                                         
                                      </span>
                                      <span>
                                        <SeeAllButton
                                          disabled={false}
                                          fluid={false}
                                          to="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
                                        >
                                          <Button
                                            as={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "displayName": "Link",
                                                "propTypes": Object {
                                                  "innerRef": [Function],
                                                  "onClick": [Function],
                                                  "replace": [Function],
                                                  "target": [Function],
                                                  "to": [Function],
                                                },
                                                "render": [Function],
                                              }
                                            }
                                            disabled={false}
                                            fluid={false}
                                            size="small"
                                            to="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
                                          >
                                            <Ref
                                              innerRef={
                                                Object {
                                                  "current": <a
                                                    class="ui small button"
                                                    href="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
                                                    role="button"
                                                  >
                                                    See all
                                                  </a>,
                                                }
                                              }
                                            >
                                              <RefForward
                                                innerRef={
                                                  Object {
                                                    "current": <a
                                                      class="ui small button"
                                                      href="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
                                                      role="button"
                                                    >
                                                      See all
                                                    </a>,
                                                  }
                                                }
                                              >
                                                <Link
                                                  className="ui small button"
                                                  onClick={[Function]}
                                                  role="button"
                                                  to="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
                                                >
                                                  <LinkAnchor
                                                    className="ui small button"
                                                    href="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
                                                    navigate={[Function]}
                                                    onClick={[Function]}
                                                    role="button"
                                                  >
                                                    <a
                                                      className="ui small button"
                                                      href="/backoffice/loans?q=patron_pid:2 AND state:(ITEM_AT_DESK OR ITEM_ON_LOAN OR ITEM_IN_TRANSIT_FOR_PICKUP OR ITEM_IN_TRANSIT_TO_HOUSE)&sort=-created"
                                                      onClick={[Function]}
                                                      role="button"
                                                    >
                                                      See all
                                                    </a>
                                                  </LinkAnchor>
                                                </Link>
                                              </RefForward>
                                            </Ref>
                                          </Button>
                                        </SeeAllButton>
                                      </span>
                                      <span />
                                    </th>
                                  </TableCell>
                                </TableHeaderCell>
                              </tr>
                            </TableRow>
                          </tfoot>
                        </TableHeader>
                      </TableFooter>
                    </ResultsTableFooter>
                  </table>
                </Table>
              </ResultsTable>
            </Error>
          </Overridable>
        </Loader>
      </Overridable(Loader)>
    </PatronCurrentLoans>
  </Router>
</BrowserRouter>
`;
